Opened 19 years ago

Closed 18 years ago

#321 closed bug (fixed)

Workspace settings, not affected by "Defaults" or "Revert" buttons

Reported by: mattmadia@… Owned by: wkornewald
Priority: low Milestone: R1
Component: Preferences/Screen Version:
Keywords: Cc: diver, wkornewald
Blocked By: Blocking:
Platform: All

Description (last modified by axeld)

hrev16823

Even though this is the same behavior in R5, imho it is a bug.

Change History (14)

comment:1 by diver, 19 years ago

Cc: diver added

comment:2 by diver, 19 years ago

Cc: stefano.ceccherini@… added

comment:3 by diver, 19 years ago

Is it dup of #130?

comment:4 by axeld, 19 years ago

Description: modified (diff)
Owner: changed from sikosis to axeld
Platform: All

comment:5 by axeld, 19 years ago

Component: PreferencesPreferences/Screen

comment:6 by axeld, 18 years ago

Owner: changed from axeld to stippi

comment:7 by wkornewald, 18 years ago

Cc: wkornewald added

comment:8 by wkornewald, 18 years ago

Priority: normallow

How will we handle the case when someone adds more workspaces, goes to a new workspace, changes the resolution, and then clicks Revert? IMHO, it would be very bad to switch the user to some other workspace (esp. without him noticing). The same applies to Defaults.

What speaks against having a fixed number of workspaces (e.g., 12, one for each F-key)?

If that is not an option we could move all buttons into the screen prefs box, so they are visually separated from the workspace settings. This would be merely a "hack", though...

comment:9 by ekdahl, 18 years ago

I find the Defaults button confusing. On vmware the default settings are 800x600 and 32 bpp. Pressing the Defaults button otoh changes the resolution to 640x480 and 8 bpp. The logical behaviour would be that the Defaults button changes to the resolution that was when no change had been done. On LCD monitors, I think the default should be the native resolution. Maybe that is already the case, I don't know (can't test because of unsupported sata controller).

comment:10 by wkornewald, 18 years ago

Owner: changed from stippi to wkornewald
Status: newassigned

I'll fix the Defaults and Revert buttons to update the workspace count and make it possible to revert even after having changed all workspaces. This means that you have to press Apply to change the number of workspaces (currently, it takes effect, immediately, without pressing Apply).

comment:11 by axeld, 18 years ago

Please don't, that's not an appropriate solution. Changes should be instant if possible, and the workspaces count is definitely an example of this.

comment:12 by wkornewald, 18 years ago

I understand your concern and normally I would agree, but in this case I think it's not possible to do it differently. The preflet obviously has the philosophy that you must apply before changes take effect. It doesn't make sense to have one half take effect immediately while the other half requires pressing Apply.

For the sake of consistency, the whole preflet should follow the same philosophy or the UI must be reorganized such that only one philosophy is visible at the same time (e.g.: use tabs). The latter will be difficult because it's not worth adding a separate section just for the workspace count.

Do you have a better suggestion?

comment:13 by axeld, 18 years ago

Yes, leave it as is :-) The only actual appropriate solution would be to move the "Defaults" and "revert" buttons into the second box. "Defaults" could even stay where it is and also set the workspaces count if you want this.

The "Defaults" button is currently broken anyway, so we might as well just remove it for now, though. It should set the default resolution, and that should be your native panel resolution, or any other app_server provided resolution.

comment:14 by wkornewald, 18 years ago

Resolution: fixed
Status: assignedclosed

This should be fixed in hrev20096, but due to R5's and Haiku's limitations you can't test the results, yet.

Note: See TracTickets for help on using tickets.