Made the Screen preflet's behavior consistent with the other preflets. * Moved Apply button into controls box (resolution, etc.), so its meaning is more obvious. * Revert now resets the whole screen settings for all workspaces to the configuration at the start of the preflet. * In confirmation window, renamed Revert to Undo because that's what it actually does (it has nothing to do with the Revert in the main dialog). * Disabled Defaults button (for now) since it doesn't use the screen's preferred settings and added a few TODOs. * This should fix bug #321. Note: Unfortunately, it won't work correctly on R5 because BScreen can only access the active workspace, it seems (locally, I used activate_workspace() for testing the preflet). Also, Haiku doesn't yet support setting screen preferences for each workspace individually, so I couldn't test it. I hope my code isn't too terrible. :)

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@20096 a95241bf-73f2-0310-859d-f6bbb57e9c96