src/preferences/screen/AlertWindow.cpp
@@ -17,7 +17,7 @@
 
 
 AlertWindow::AlertWindow(BMessenger target)
-	: BWindow(BRect(100.0, 100.0, 400.0, 193.0), "Revert",
+	: BWindow(BRect(100.0, 100.0, 400.0, 193.0), "Undo",
 		B_MODAL_WINDOW_LOOK, B_MODAL_APP_WINDOW_FEEL,
 		B_NOT_RESIZABLE | B_NOT_ZOOMABLE, B_ALL_WORKSPACES),
 	fTarget(target)
@@ -43,7 +43,7 @@ AlertWindow::MessageReceived(BMessage *message)
 			PostMessage(B_QUIT_REQUESTED);
 			break;
 
-		case BUTTON_REVERT_MSG:
+		case SET_INITIAL_MODE_MSG:
 			fTarget.SendMessage(SET_INITIAL_MODE_MSG);
 			PostMessage(B_QUIT_REQUESTED);
 			break;
